# cpp-conanv2-template

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup.sh
src/: main.cpp
